--- a/html/css/style.css
+++ b/html/css/style.css
@@ -12,7 +12,7 @@ body {
 
 #page {
   background-color: #2b2626;
-  width: 1295px;
+  width: 100%;
   margin:auto;
   margin-top: 10px;
   padding: auto;
@@ -59,7 +59,7 @@ body {
 }
 
 #mainarea {
-  width: 600px;
+  width: calc(100% - 320px);
   padding-top:0px;
   display: inline-block;
 }
